--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.appro2">
 
@@ -8,8 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppRO2">
-
-        <!-- Actividades registradas -->
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"> <!-- debe ser true si tiene intent-filter -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".RepartidorActivity" />
         <activity android:name=".AgricultorActivity" />
         <activity android:name=".GranjeroActivity" />
@@ -17,15 +27,11 @@
         <activity android:name=".RolActivity" />
         <activity android:name=".HistorialActivity" />
         <activity android:name=".PerfilActivity" />
-        <activity android:name=".CheckoutActivity" />
-
-        <!-- Actividad de inicio -->
-        <activity android:name=".MainActivity" android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".CheckoutActivity" /> <!-- Actividad de inicio -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
         </activity>
-
     </application>
+
 </manifest>
