--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.appro2">
 
+    <!-- 🔐 Permisos para acceder a imágenes -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppRO2">
+
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
@@ -27,11 +33,10 @@
         <activity android:name=".RolActivity" />
         <activity android:name=".HistorialActivity" />
         <activity android:name=".PerfilActivity" />
-        <activity android:name=".CheckoutActivity" /> <!-- Actividad de inicio -->
+        <activity android:name=".CheckoutActivity" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
